--- a/GameOfLife/GameOfLife.vcxproj
+++ b/GameOfLife/GameOfLife.vcxproj
@@ -135,11 +135,14 @@
     <ClCompile Include="DrawingPanel.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="SettingsDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="DrawingPanel.h" />
     <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="Settings.h" />
+    <ClInclude Include="SettingsDialog.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
