Added the ability to reset settings in the menu options. They reset to a default set of settings. Added universe type of finite or toroidal.

--- a/GameOfLife/GameOfLife.vcxproj
+++ b/GameOfLife/GameOfLife.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="DrawingPanel.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="Settings.cpp" />
     <ClCompile Include="SettingsDialog.cpp" />
   </ItemGroup>
   <ItemGroup>
