--- a/GameOfLife/GameOfLife.vcxproj.filters
+++ b/GameOfLife/GameOfLife.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="SettingsDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Settings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h">
